<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UIPickerLibrary</string>
    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>
    <string name="slide_up">Slide up</string>
    <string name="slide">Slide</string>
    <string name="slide_down">Slide down</string>
    <string name="random_color">Random color</string>
    <string name="use_blur">Use blur</string>
    <string name="items_clickables">Items clickables</string>
    <string name="auto_dismiss">Auto dismiss</string>
    <string name="blur_radius">Blur Radius</string>
    <string name="blur_downscale">Blur Downscale</string>

</resources>
